<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">Referencia</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Iniciar sesión</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">\ Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Nombre de usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_create_account">¡Unete!</string>
    <string name="toolbar_tittle_create_account">Crear cuenta</string>
    <string name="username_card">Elioth Monroy</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Yo</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="title_fragment_home">Home</string>
    <string name="dummy_number">10</string>
    <string name="second_word_detail">likes</string>
    <string name="tittle_image_detail">Just having drinks</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, so sed, molestie aliquam est. Nam sed ex vel sem fermentum varius. Duis malesuada lobortis tincidunt. Nam mattis nunc quis arcu ultrices viverra ut vulputate enim. Nam et libero sollicitudin, dapibus lacus ac, ullamcorper purus. Pellentesque vitae leo eget odio dictum aliquam at a ligula.</string>
    <string name="transitionname_picture">transitionname_picture</string>
    <string name="login_invalid">Please fill both username and password</string>
    <string name="hint_post_title">Tittle</string>
    <string name="hint_post_description">Description</string>
    <string name="text_button_create_post">Create post</string>
    <string name="facebook_app_id">2180444108920051</string>
    <string name="fb_login_protocol_scheme">fb2180444108920051</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_about">About Platzigramm</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">Test message</string>


</resources>
