<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerCrop"
            android:background="@color/backgroundtext_card"/>

        <!-- post tittle -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/edittext_margin_createaccount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPostTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_post_title"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- post description -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/edittext_margin_createaccount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPostDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_post_description"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_create_post"
            android:theme="@style/RaisedButtonDark"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>